[package]
name = "anchor-stoploss"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_stoploss"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.11.1"
anchor-spl = "0.11.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
serum_dex = { version = "0.4.0", git = "https://github.com/project-serum/serum-dex.git", features=["no-entrypoint", "program"] }
zeroize = "=1.3.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64" }
bincode = "1.3.3"
base64 = "0.13.0"

